ahora si the last commit, se habia borrado el formulario de app component.html para una prueba, ya se agrega de nuevo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+  <span>Mi Aplicación Angular</span>
+  <span class="spacer"></span>
+  <button *ngIf="authService.isAuthenticated()" mat-button (click)="authService.logout()">
+    <mat-icon>logout</mat-icon> Salir
+  </button>
+</mat-toolbar>
